:wrench: fixed archicteructure mistake and added dark mode support

--- a/Apps/Front/lumina/src/index.css
+++ b/Apps/Front/lumina/src/index.css
@@ -9,4 +9,20 @@ body,
 
 body {
   margin: 0;
+  background: var(--background);
+  color: var(--text);
+}
+
+.light {
+  --primary: #ffffff;
+  --secondary: #000000;
+  --background: #f0f0f0;
+  --text: #333333;
+}
+
+.dark {
+  --primary: #000000;
+  --secondary: #ffffff;
+  --background: #333333;
+  --text: #f0f0f0;
 }
